--- a/gb/24/6/4/n14263534.md
+++ b/gb/24/6/4/n14263534.md
@@ -6,19 +6,19 @@
 <h6>2024年6月3日，在悉尼举行的一场奥运前热身赛中，澳洲女足队以2比0战胜中国队。图为双方球员争顶瞬间。(Mark Metcalfe/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2024年06月04日讯】（大纪元记者肖婕澳洲悉尼编译报导）周一晚，澳洲女足队在悉尼举行的最后一场奥运前热身赛中，以2比0战胜中国队，士气大增。她们的注意力现已转向即将到来的巴黎奥运会。</p>
+<p>【大纪元2024年06月04日讯】（大纪元记者肖婕澳洲悉尼编译报导）周一晚，澳洲女足队在悉尼举行的最后一场奥运前热身赛中，以2:0战胜中国队，士气大增。她们的注意力现已转向即将到来的巴黎奥运会。</p>
 <p>据澳洲新闻有限公司网站报导，6月3日晚，在悉尼雅高体育场（Accor Stadium），澳洲女足队（也称马蒂尔达斯队，Matildas）与中国女足队进行了进军奥运会前的最后一战。这场比赛吸引了7.6万多名球迷现场观战。</p>
 <p>上半场打得很艰苦，双方都未能进球。而下半场澳洲队出现了很大转机。</p>
 <p>澳洲队的惠勒（Clare Wheeler）替换下范·埃格蒙德（Emily Van Egmond）。她立即发挥了作用，仅两分钟后就攻入一球。</p>
 <p>澳洲队队长卡特利（Steph Catley）将一个任意球传给惠勒。惠勒把握好时机头球攻门，将球送入球门的下角。</p>
 <p>不到10分钟后，澳洲队的拉索（Hayley Raso）接到瓦伊恩（Courtnee Vine）一个漂亮的直传，在中国队的防线后面破门，澳洲队的领先优势扩大。</p>
-<p>拉索一接到球就突破了对方守门员的防守，轻松将球射入，帮助澳洲队赢得了2-0的优势。</p>
-<p>在2-0领先后，澳洲队并没有松懈，但随着中国队的后场力量加强，澳洲队的进攻机会逐渐减弱。</p>
+<p>拉索一接到球就突破了对方守门员的防守，轻松将球射入，帮助澳洲队赢得了2:0的优势。</p>
+<p>在2:0领先后，澳洲队并没有松懈，但随着中国队的后场力量加强，澳洲队的进攻机会逐渐减弱。</p>
 <p>最后，下半场进入两球的澳洲队向球迷们挥手告别。</p>
 <p>世界排名第12位的澳洲女足会在周二公布参加巴黎奥运会的最终球队名单。</p>
 <p>由于有5名球员从目前的23名球员中被裁掉，将只有18名球员登上飞往巴黎的飞机。</p>
 <p>澳洲队被分在奥运女足赛的B组，她们会迎战排名第四的美国队、排名第五的德国队和赞比亚队。</p>
-<p>上周在阿德莱德澳洲女足与中国女足的首场比赛中，两队以1比1战平。</p>
+<p>上周在阿德莱德，澳洲女足与中国女足的首场比赛中，两队以1:1战平。</p>
 <p>责任编辑：岳明</p>
 <p><strong>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="http://dajiyuan.com.au/" data-cke-saved-href="http://dajiyuan.com.au/">dajiyuan.com.au</a></strong><br />
 <strong> （本文未经许可不得转载或建立镜像网站）</strong></p>
@@ -27,37 +27,37 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/7/n14197250.md#1">澳女足队长否认种族骚扰英国警察 引发热议</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/10/n14199301.md#1">中国U20女足未能出线 连续两届无缘世界杯</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/27/n14235365.md#1">U23亚洲杯四强出炉 韩国不敌印尼无缘奥运</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262238.md#1">王家马德里2:0胜多特蒙德 第15次登顶欧冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261852.md#1">NBA总决赛：绿军战绩占优 独行侠气势更盛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261255.md#1">NBA一冠难求 季后赛出场最多的前五大球星</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260419.md#1">豪门换帅：孔帕尼入主拜仁 弗里克接手巴萨</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258130.md#1">F1摩纳哥站：勒克莱尔破“魔咒” 创造历史</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/26/n14257936.md#1">三国杯赛决战：曼联、勒沃库森、巴黎夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286478.md#1">应氏杯：许皓鋐布局中招 谢科再度闯入决赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285805.md#1">F1英国站：汉密尔顿银石第9次登顶 创造历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285391.md#1">应氏杯半决赛：许皓鋐痛失好局 谢科先下一城</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285356.md#1">欧洲杯八强战结束 四大豪强进入半决赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285000.md#1">塔图姆获NBA史上最大合同 詹姆斯顶薪留队</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284719.md#1">西班牙加时绝杀德国 法国点球淘汰葡萄牙</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962346.md#1" target="_blank">鲜为人知的马克思之一：专制的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/11/n11648921.md#1" target="_blank">林辉：国家足球队头号前锋文革缘何自杀？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258805.md#1">【未解之谜】遇难总能呈祥？盘点蒋介石身边的那些高人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258188.md#1">摄生高人孙思邈的神通与道行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14258987.md#1">高智晟律师风骨纪实 韩亦言笔下动人心魄的传奇人物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254177.md#1">【古道人生】命中利北不利南 在南方一试难中 在北方则隆隆直上</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262295.md#1">【菁英论坛】华融两高管判死刑 背后内幕深</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263416.md#1">【马克时空】F-16即将进场 乌军全力做准备</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14261870.md#1">【时事金扫描】川普被判有罪 捐款网站一度挤爆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260428.md#1">Costco高级会员资格四大缺点 鲜为人知</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262233.md#1">英伟达CEO黄仁勋言论 令五毛炸锅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262118.md#1">美B-52轰炸机将服役近百年 向对手释何信号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262423.md#1">《沙丘2》2024目前最卖座 导演却失望 盼被取代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262219.md#1">汤唯晒与孔刘合照 粉丝惊喜直呼画面美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262195.md#1">“那英跑调”登热搜榜第一 《歌手5》大洗牌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261808.md#1">张学友睽违6年返台北开唱 秀一字马全场嗨爆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262237.md#1">布鲁斯?威利患失智症 息影逾2年近况曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14257411.md#1">老化导致头发脱落、变白 7种营养素让头发回春</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259422.md#1">【一箪食】玫瑰豆腐乳煎鸡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258609.md#1">西葫芦：夏季餐桌上的清新之选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262121.md#1">【美食天堂】鲜虾春卷做法～酥脆好吃！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262424.md#1">研究：柳橙皮有助于改善心脏健康</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14279772.md#1">【古道人生】女子婚姻不好 可能是什么原因？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14280988.md#1">这仆人怎得变身为太守？一介贫儿又怎成了皇帝亲信呢？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285334.md#1">【时事军事】空射版标准6 填补美军关键领域</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284972.md#1">【晚间新闻】华人教授被控诈骗1600万美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285233.md#1">【时事金扫描】英国大变天 新首相曾两次访台</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283791.md#1">中国“快递一哥”顺丰负债千亿 流动资产仅百亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283914.md#1">令外籍人士最感幸福的10个国家 亚洲占半</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282587.md#1">北京等多地房价暴跌 分析：房市未见底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284692.md#1">胡歌携妻与香港艺人聚餐 老婆正面照首度曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285195.md#1">26届台北电影奖完整名单 影帝阮经天影后林品彤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284348.md#1">《神偷奶爸4》影评 观众给最高 影评员给最低</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285307.md#1">上海开唱在高台上滑跪 刘德华因危险动作道歉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14284934.md#1">越吃越瘦？专家：“负热量食物”有助减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283587.md#1">除了保存食物的用途 冰箱也是料理“高手”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285552.md#1">在游泳池最容易得这三种病 千万要小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280741.md#1">新冠疫情来势汹汹 中医师教你这样预防与改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282156.md#1">想吃高纤早餐 教你这些创意点子</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/4/n14263534.htm">奥运前悉尼热身赛 澳女足2比0胜中国队</a></p><hr>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/6/4/n14263534.htm">奥运前悉尼热身赛 澳女足2比0胜中国队</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263534.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
